# numcrunch

./: .gitignore  CMakeLists.txt  Makefile  README.md  clenshaw.c  clenshaw.h  clenshaw_scalar.c
src/: CMakeLists.txt  clenshaw.c  clenshaw.h  clenshaw_scalar.c  clenshaw_thread.c  clenshaw_vector.c  main.c  main_thread.c  vectorized.h
